--- a/style.css
+++ b/style.css
@@ -12,7 +12,8 @@ html{
 .brief{
     display: flex;
     justify-content: center;
-    background-image: url(img/background.jpg);
+    background-image: url(img/background.jpeg);
+    background-size: 120rem;
     background-position: center;
     background-repeat: no-repeat;
 }
