--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,7 +6,7 @@
 
 @font-face {
     font-family: "Birthstone Bounce";
-    src: url("../font/BirthstoneBounce-Regular.ttf");
+    src: url("../font/DancingScript-VariableFont_wght.ttf");
 }
 
 html {
@@ -15,11 +15,13 @@ html {
 }
 
 .brief {
+    padding: 4rem 0;
     display: flex;
     justify-content: center;
-    background-color: lightcoral;
-    color: #632104;
+    background-color: #d8a575;
+    color: #4e1a03;
     position: relative;
+    height: 100%;
 }
 
 .brief__text {
@@ -47,6 +49,7 @@ html {
     font-size: 4.6rem;
     animation: highlight 2s ease-in-out infinite;
     text-decoration: none;
+
 }
 
 @keyframes highlight {
@@ -73,7 +76,6 @@ html {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    height: 80vh;
 }
 
 .popup {
@@ -82,7 +84,10 @@ html {
     display: none;
     color: black;
     border: 1px solid black;
+    background-color: lightgray;
     z-index: 1;
+    position: fixed;
+    top: 25%;
 }
 
 .popup__figure {
@@ -91,7 +96,6 @@ html {
 }
 
 .popup__img {
-    background-color: rgb(0, 0, 139);
     object-fit: contain;
     height: 100%;
     width: 100%;
@@ -103,6 +107,7 @@ html {
     width: 60%;
     font-size: 2rem;
     gap: 1.4rem;
+    line-height: 1.7;
 }
 
 .popup__title {
@@ -111,11 +116,15 @@ html {
     font-weight: 500;
 }
 
+.popup__par span {
+    font-weight: bold;
+}
+
 .close-button {
     margin: 2rem;
     border-radius: 50%;
     height: 5rem;
-    width: 5rem;
+    width: 5.5rem;
     font-size: 3rem;
     background: white(0, 0, 139);
     color: rgb(0, 0, 139);
