--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,6 +12,7 @@
 html {
     font-size: 62.5%;
     font-family: sans-serif;
+    cursor: auto;
 }
 
 .brief {
@@ -49,6 +50,7 @@ html {
     font-size: 4.6rem;
     animation: highlight 2s ease-in-out infinite;
     text-decoration: none;
+    cursor: pointer;
 
 }
 
@@ -129,4 +131,18 @@ html {
     background: white(0, 0, 139);
     color: rgb(0, 0, 139);
     border: 2px solid rgb(0, 0, 139);
+}
+
+::-webkit-scrollbar {
+    width: 15px;
+}
+
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #4e1a03;
+    border-radius: 5px;
 }
