JS en CSS minified

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -16,27 +16,26 @@ html {
 }
 
 .brief {
-    padding: 4rem 0;
+    padding: 3rem 0;
     display: flex;
     justify-content: center;
     background-color: #d8a575;
     color: #4e1a03;
     position: relative;
-    height: 100%;
+    height: 100vh;
 }
 
 .brief__text {
     height: 100%;
     display: flex;
     flex-direction: column;
-    width: 100rem;
+    width: 140rem;
     font-family: "Birthstone Bounce";
 }
 
 .brief__text__title {
     font-size: 6rem;
     font-weight: 500;
-    padding: 1rem;
 }
 
 .brief__text {
@@ -48,30 +47,34 @@ html {
     color: blue;
     font-weight: 500;
     font-size: 4.6rem;
-    animation: highlight 2s ease-in-out infinite;
+    animation: highlight 2s ease-in infinite;
     text-decoration: none;
     cursor: pointer;
-
 }
 
 @keyframes highlight {
 
     0%,
-    40%,
+    50%,
     80% {
         color: rgb(0, 0, 139);
     }
 
-    20%,
-    60%,
+    25%,
     100% {
         color: rgb(0, 0, 0);
     }
-
 }
 
+@keyframes opacity {
+    0% {
+        opacity: 0%;
+    }
 
-/* POPUP */
+    100% {
+        opacity: 100%;
+    }
+}
 
 .popup__collection {
     display: flex;
@@ -90,6 +93,7 @@ html {
     z-index: 1;
     position: fixed;
     top: 25%;
+    animation: opacity 0.3s ease-in-out;
 }
 
 .popup__figure {
@@ -129,8 +133,8 @@ html {
     width: 5.5rem;
     font-size: 3rem;
     background: white(0, 0, 139);
-    color: rgb(0, 0, 139);
-    border: 2px solid rgb(0, 0, 139);
+    color: #4e1a03(0, 0, 139);
+    border: 2px solid #4e1a03(0, 0, 139);
 }
 
 ::-webkit-scrollbar {
